add ldapuser and alluser type permissions

--- a/webapp/src/main/webapp/public/resources/style.css
+++ b/webapp/src/main/webapp/public/resources/style.css
@@ -435,6 +435,7 @@ input[type=password]::-ms-reveal {
     color: white;
     background: #3e374c;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .btn:disabled {
