add js showDialog() html5 href support convert dojo/form api to native js

--- a/webapp/src/main/webapp/public/resources/style.css
+++ b/webapp/src/main/webapp/public/resources/style.css
@@ -1041,8 +1041,7 @@ progress[value] {
 }
 
 .dialogBody.wide {
-    width: 95%;
-    max-width: 100%;
+    width: 750vw;
     min-width: 800px;
 }
 
