--- a/webapp/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/webapp/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -637,7 +637,7 @@ select {
 
 /* TOGGLE STYLING */
 .toggle {
-    margin: 0 0 0.2rem;
+    margin: 0 0 2px;
     box-sizing: border-box;
     font-size: 0;
     display: flex;
@@ -654,7 +654,7 @@ select {
 .toggle input + label {
     color: #656565;
     margin: 0;
-    padding: 0.3em;
+    padding: 4px;
     box-sizing: border-box;
     position: relative;
     display: inline-block;
@@ -665,14 +665,6 @@ select {
     text-align: center;
     box-shadow: 0 0 0 rgba(255, 255, 255, 0);
     transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
-    /* ADD THESE PROPERTIES TO SWITCH FROM AUTO WIDTH TO FULL WIDTH */
-    /*
-    flex: 0 0 50%;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-*/
-    /* ----- */
 }
 .toggle input + label:first-of-type {
     border-radius: 6px 0 0 6px;
