Update intruder client references.

--- a/webapp/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/webapp/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -594,10 +594,14 @@ select {
 
 .navigableDN {
     cursor: pointer;
+    overflow-y: auto;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 .selectableDN {
     cursor: pointer;
+    overflow-y: auto;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 .setting-challenge-question-summary {
